# libtock-rs

./: .gitignore  .gitmodules  .ignore  .nonempty-github-dummy  .rgignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Design.md  Makefile  OWNERS  PRESUBMIT.cfg  PRESUBMIT.sh  README.md  Targets.mk  Xargo.toml  blink  bors.toml  build.rs  build_examples.sh  flash.sh  hail_layout.ld  layout.ld  layout_generic.ld  layout_nrf52840.ld  layout_opentitan.ld  layout_riscv32.ld  libtock_layout.ld  metadata.toml  nrf52840_layout.ld  nrf52_layout.ld  opentitan_layout.ld  riscv32_layout.ld  run_all_checks.sh  run_example.sh  run_hardware_test.sh  run_ipc_example.sh  rust-toolchain  (+5 more)
.cargo/: config  config.toml
apis/alarm/: Cargo.toml
apis/alarm/src/: lib.rs
apis/analog_comparator/: Cargo.toml
apis/analog_comparator/src/: lib.rs  tests.rs
apis/block_storage/: Cargo.toml
apis/block_storage/src/: lib.rs  tests.rs
apis/interface/console/: Cargo.toml
apis/interface/console/src/: lib.rs  tests.rs
apis/interface/leds/: Cargo.toml
apis/interface/leds/src/: lib.rs
apis/ninedof/: Cargo.toml
apis/ninedof/src/: lib.rs  tests.rs
apis/screen/: Cargo.toml
apis/screen/src/: lib.rs  lib.rs.orig  tests.rs  tests.rs.orig
apis/sound_pressure/: Cargo.toml
apis/sound_pressure/src/: lib.rs  tests.rs
async-support/: Cargo.toml
async-support/src/: lib.rs
build_scripts/: Cargo.toml  README.md  build.rs  libtock_layout.ld
build_scripts/src/: lib.rs
core/: Cargo.toml  README.md  build.rs
core/console/: Cargo.toml
core/console/src/: lib.rs
core/examples/: custom_handler.rs  empty_main.rs
core/platform/: Cargo.toml
core/platform/src/: async_traits.rs  command_return.rs  command_return_tests.rs  error_code.rs  lib.rs  platform_api.rs  raw_syscalls.rs  return_code.rs  return_type.rs  return_variant.rs  syscall_types.rs  syscalls.rs  syscalls_impl.rs  yield_types.rs
core/platform/src/allows/: allow_readable.rs  allowed.rs  allowed_slice.rs  allowed_slice_tests.rs  allowed_tests.rs  mod.rs  test_util.rs
core/runtime/: Cargo.toml  build.rs  extern_asm.rs  libtock_layout.ld
core/runtime/asm/: asm_riscv32.S  assemble.sh
core/runtime/layouts/: apollo3.ld  hail.ld  hifive1.ld  msp432.ld  nrf52.ld  nrf52840.ld  opentitan.ld
core/runtime/src/: lib.rs  start_prototype.rs  startup.rs  syscalls_impl_riscv.rs
core/src/: alloc.rs  callback.rs  lang_items.rs  lib.rs  memop.rs  result.rs  shared_memory.rs  stack_size.rs  unwind_symbols.rs
core/src/debug/: mod.rs  platform.rs  platform_arm.rs  platform_riscv32.rs
core/src/entry_point/: mod.rs  start_item.rs  start_item_arm.rs  start_item_riscv32.rs
core/src/syscalls/: mod.rs  platform.rs  platform_arm.rs  platform_riscv32.rs
core/sync/: Cargo.toml
core/sync/src/: lib.rs
demos/st7789/: Cargo.toml  Makefile
demos/st7789-slint/: Cargo.toml  Makefile  build.rs
demos/st7789-slint/src/: main.rs
demos/st7789-slint/ui/: appwindow.slint
demos/st7789/src/: main.rs
libraries/embedded_graphics_libtock/: Cargo.toml  README.md
libraries/embedded_graphics_libtock/src/: lib.rs  tock_screen.rs
libtock2/: Cargo.toml
libtock2/examples/: buttons.rs  leds.rs  low_level_debug.rs
libtock2/src/: lib.rs
panic_handler/: Cargo.toml
panic_handler/src/: lib.rs
panic_handlers/debug_panic/: Cargo.toml
panic_handlers/debug_panic/src/: lib.rs
platform/: Cargo.toml
platform/src/: allow_ro.rs  allow_rw.rs  async_traits.rs  command_return.rs  command_return_tests.rs  constants.rs  default_config.rs  error_code.rs  error_code_tests.rs  exit_on_drop.rs  lib.rs  raw_syscalls.rs  register.rs  return_variant.rs  subscribe.rs  syscall_scope.rs  syscalls.rs  syscalls_impl.rs  termination.rs  yield_types.rs
platform/src/share/: handle.rs  mod.rs  tests.rs  tuple_impls.rs
print_macros/: Cargo.toml
print_macros/src/: lib.rs
runner/: Cargo.toml
runner/src/: elf2tab.rs  main.rs  output_processor.rs  qemu.rs  tockloader.rs
runtime/: Cargo.toml  build.rs  extern_asm.rs  libtock_layout.ld
runtime/asm/: asm_riscv32.S  start_prototype.rs
runtime/layouts/: apollo3.ld  clue_nrf52840.ld  esp32-c3-devkitM-1.ld  esp32_c3_devkitm_1.ld  hail.ld  hifive1.ld  imix.ld  imxrt1050.ld  microbit_v2.ld  msp432.ld  nano_rp2040_connect.ld  nrf52.ld  nrf52840.ld  nucleo_f429zi.ld  nucleo_f446re.ld  opentitan.ld  raspberry_pi_pico.ld  raspberrypi_pico.ld  stm32f3discovery.ld  stm32f412gdiscovery.ld
runtime/src/: .syscalls_impl_riscv.rs.swp  lib.rs  startup.rs  syscalls_impl_arm.rs  syscalls_impl_riscv.rs  syscalls_impl_x86.rs
runtime/src/startup/: asm_arm.s  asm_armv6.s  asm_riscv32.s  asm_x86.s  mod.rs  start_prototype.rs
support-macros/: Cargo.toml
support-macros/src/: lib.rs
templates/: Cargo.toml  deploy.sh  hail_layout.ld  nrf52_layout.ld  riscv32_layout.ld  setup.sh
templates/.cargo/: config
templates/src/: main.rs
test-runner/: Cargo.toml
test-runner/src/: main.rs
test_runner/: Cargo.toml
test_runner/src/: main.rs
tools/print-sizes/: Cargo.toml
tools/print_sizes/: Cargo.toml
tools/print_sizes/src/: main.rs
unittest/: Cargo.toml
unittest/src/: allow_db.rs  allow_db_test.rs  command_return.rs  driver.rs  driver_info.rs  expected_syscall.rs  kernel_data.rs  lib.rs  share_data.rs  syscall_log.rs  upcall.rs
unittest/src/exit_test/: mod.rs  tests.rs
unittest/src/fake/: driver.rs  kernel.rs  kernel_tests.rs  mod.rs  syscall_driver.rs
unittest/src/fake/adc/: mod.rs  tests.rs
unittest/src/fake/air_quality/: mod.rs  tests.rs
unittest/src/fake/alarm/: mod.rs  tests.rs
unittest/src/fake/ambient_light/: mod.rs  tests.rs
unittest/src/fake/analog_comparator/: mod.rs  tests.rs
unittest/src/fake/buttons/: mod.rs  tests.rs
unittest/src/fake/buzzer/: mod.rs  tests.rs
unittest/src/fake/console/: mod.rs  tests.rs
unittest/src/fake/display/: mod.rs  tests.rs
unittest/src/fake/gpio/: mod.rs  tests.rs
unittest/src/fake/ieee802154/: mod.rs
unittest/src/kernel/: command_impl.rs  command_impl_tests.rs  mod.rs  raw_syscalls_impl.rs  thread_local.rs  yield_impl.rs  yield_impl_tests.rs
(+374 files in other folders)
