[package]
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
categories = ["embedded", "no-std", "os"]
description = """Tock Rust userspace library collection. Provides all the \
                 tools needed to create a Tock Rust process binary."""
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "libtock"
repository = "https://www.github.com/tock/libtock-rs"
version = "0.1.0"

[dependencies]
libtock_adc = { path = "apis/adc"}
libtock_air_quality = { path = "apis/air_quality" }
libtock_alarm = { path = "apis/alarm" }
libtock_ambient_light = { path = "apis/ambient_light" }
libtock_buttons = { path = "apis/buttons" }
libtock_buzzer = {path = "apis/buzzer"}
libtock_console = { path = "apis/console" }
libtock_debug_panic = { path = "panic_handlers/debug_panic" }
libtock_gpio = { path = "apis/gpio" }
libtock_leds = { path = "apis/leds" }
libtock_low_level_debug = { path = "apis/low_level_debug" }
libtock_ninedof = { path = "apis/ninedof" }
libtock_platform = { path = "platform" }
libtock_proximity = { path = "apis/proximity" }
libtock_runtime = { path = "runtime" }
libtock_sound_pressure = {path = "apis/sound_pressure"}
libtock_temperature = { path = "apis/temperature" }

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true
debug = true

[workspace]
exclude = ["tock"]
members = [
    "apis/adc",
    "apis/air_quality",
    "apis/alarm",
    "apis/gpio",
    "apis/buttons",
    "apis/buzzer",
    "apis/console",
    "apis/leds",
    "apis/low_level_debug",
    "apis/ninedof",
    "apis/proximity",
    "apis/temperature",
    "apis/ambient_light",
    "panic_handlers/debug_panic",
    "panic_handlers/small_panic",
    "platform",
    "runner",
    "runtime",
    "syscalls_tests",
    "tools/print_sizes",
    "ufmt",
    "unittest",
]
