[package]
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
categories = ["embedded", "no-std", "os"]
description = """Tock Rust userspace library collection. Provides all the \
                 tools needed to create a Tock Rust process binary."""
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "libtock"
repository = "https://www.github.com/tock/libtock-rs"
rust-version.workspace = true
version = "0.1.0"

[workspace.package]
# This must be kept in sync with rust-toolchain.toml; please see that file for
# more information.
rust-version = "1.74"

[dependencies]
libtock_adc = { path = "apis/adc" }
libtock_air_quality = { path = "apis/air_quality" }
libtock_alarm = { path = "apis/alarm" }
libtock_ambient_light = { path = "apis/ambient_light" }
libtock_buttons = { path = "apis/buttons" }
libtock_buzzer = { path = "apis/buzzer" }
libtock_console = { path = "apis/console" }
libtock_debug_panic = { path = "panic_handlers/debug_panic" }
libtock_gpio = { path = "apis/gpio" }
libtock_i2c_master = { path = "apis/i2c_master" }
libtock_i2c_master_slave = { path = "apis/i2c_master_slave" }
libtock_key_value = { path = "apis/key_value" }
libtock_leds = { path = "apis/leds" }
libtock_low_level_debug = { path = "apis/low_level_debug" }
libtock_ninedof = { path = "apis/ninedof" }
libtock_platform = { path = "platform" }
libtock_proximity = { path = "apis/proximity" }
libtock_rng = { path = "apis/rng" }
libtock_runtime = { path = "runtime" }
libtock_sound_pressure = { path = "apis/sound_pressure" }
libtock_temperature = { path = "apis/temperature" }

[build-dependencies]
libtock_build_scripts = { path = "build_scripts" }

[profile.dev]
debug = true
lto = true
panic = "abort"

[profile.release]
debug = true
lto = true
panic = "abort"

[workspace]
exclude = ["tock"]
members = [
    "apis/adc",
    "apis/air_quality",
    "apis/alarm",
    "apis/ambient_light",
    "apis/buttons",
    "apis/buzzer",
    "apis/console",
    "apis/gpio",
    "apis/i2c_master",
    "apis/i2c_master_slave",
    "apis/key_value",
    "apis/leds",
    "apis/low_level_debug",
    "apis/ninedof",
    "apis/proximity",
    "apis/rng",
    "apis/temperature",
    "panic_handlers/debug_panic",
    "panic_handlers/small_panic",
    "platform",
    "runner",
    "runtime",
    "syscalls_tests",
    "tools/print_sizes",
    "ufmt",
    "unittest",
]
