[package]
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
categories = ["embedded", "no-std", "os"]
description = """Tock Rust userspace library collection. Provides all the \
                 tools needed to create a Tock Rust process binary."""
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "libtock"
repository = "https://www.github.com/tock/libtock-rs"
rust-version.workspace = true
version = "0.1.0"

[workspace.package]
# This must be kept in sync with rust-toolchain.toml; please see that file for
# more information.
rust-version = "1.77"

[features]
rust_embedded = [
    "embedded-hal",
    "libtock_platform/rust_embedded",
    "libtock_gpio/rust_embedded",
]

[dependencies]
libtock_adc = { path = "apis/peripherals/adc" }
libtock_air_quality = { path = "apis/sensors/air_quality" }
libtock_alarm = { path = "apis/peripherals/alarm" }
libtock_ambient_light = { path = "apis/sensors/ambient_light" }
libtock_buttons = { path = "apis/interface/buttons" }
libtock_buzzer = { path = "apis/interface/buzzer" }
libtock_console = { path = "apis/interface/console" }
libtock_debug_panic = { path = "panic_handlers/debug_panic" }
libtock_gpio = { path = "apis/peripherals/gpio" }
libtock_i2c_master = { path = "apis/peripherals/i2c_master" }
libtock_ieee802154 = { path = "apis/net/ieee802154" }
libtock_i2c_master_slave = { path = "apis/peripherals/i2c_master_slave" }
libtock_key_value = { path = "apis/storage/key_value" }
libtock_leds = { path = "apis/interface/leds" }
libtock_low_level_debug = { path = "apis/kernel/low_level_debug" }
libtock_ninedof = { path = "apis/sensors/ninedof" }
libtock_platform = { path = "platform" }
libtock_proximity = { path = "apis/sensors/proximity" }
libtock_rng = { path = "apis/peripherals/rng" }
libtock_runtime = { path = "runtime" }
libtock_small_panic = { path = "panic_handlers/small_panic" }
libtock_sound_pressure = { path = "apis/sensors/sound_pressure" }
libtock_spi_controller = { path = "apis/peripherals/spi_controller" }
libtock_temperature = { path = "apis/sensors/temperature" }

embedded-hal = { version = "1.0", optional = true }

[build-dependencies]
libtock_build_scripts = { path = "build_scripts" }

[profile.dev]
debug = true
lto = true
panic = "abort"

[profile.release]
debug = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[workspace]
exclude = ["tock"]
members = [
    "apis/interface/buttons",
    "apis/interface/buzzer",
    "apis/interface/console",
    "apis/interface/leds",
    "apis/kernel/low_level_debug",
    "apis/peripherals/adc",
    "apis/peripherals/alarm",
    "apis/peripherals/gpio",
    "apis/peripherals/i2c_master",
    "apis/peripherals/i2c_master_slave",
    "apis/peripherals/rng",
    "apis/sensors/air_quality",
    "apis/sensors/ambient_light",
    "apis/sensors/ninedof",
    "apis/sensors/proximity",
    "apis/sensors/temperature",
    "apis/storage/key_value",
    "demos/st7789",
    "demos/st7789-slint",
    "panic_handlers/debug_panic",
    "panic_handlers/small_panic",
    "platform",
    "runner",
    "runtime",
    "syscalls_tests",
    "tools/print_sizes",
    "ufmt",
    "unittest",
]
