[package]
name = "libtock-core"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>", "Woyten <woyten.tielesch@online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = [ "linked_list_allocator" ]

[dependencies]
linked_list_allocator = { optional = true, version = "=0.6.5", default-features = false }