[package]
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
categories = ["embedded", "no-std", "os"]
description = """Tock Rust userspace library collection. Provides all the \
                 tools needed to create a Tock Rust process binary."""
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "libtock2"
repository = "https://www.github.com/tock/libtock-rs"
version = "0.1.0"

[dependencies]
libtock_platform = { path = "../platform" }
libtock_runtime = { path = "../runtime" }
libtock_buttons = { path = "../apis/buttons" }
libtock_console = { path = "../apis/console" }
libtock_leds = { path = "../apis/leds" }
libtock_low_level_debug = { path = "../apis/low_level_debug" }

# TODO: Implement a panic handler with more debugging functionality, then
# replace libtock_small_panic with the debug-heavy panic handler here.
libtock_small_panic = { path = "../panic_handlers/small_panic" }
