[package]
name = "libtock_print_macros"
version = "0.1.0"
authors = [
    "Tock Project Developers <tock-dev@googlegroups.com>",
    "dcz <gihuac.dcz@porcupinefactory.org>",
]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://www.github.com/tock/libtock-rs"
description = "libtock print debugging macros"

[dev-dependencies]
libtock_console = { path = "../apis/console" }
#libtock_runtime = { path = "../runtime" }
