[package]
name = "libtock-support-macros"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.6", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"