[package]
name = "test-runner"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
futures = "0.3.4"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dependencies.tokio]
version = "0.2.12"
features = ["process", "rt-threaded", "macros", "io-util", "time"]