[package]
name = "libtock_block_storage"
version = "0.1.0"
authors = [
    "Tock Project Developers <tock-dev@googlegroups.com>",
    "dcz <gihuac.dcz@porcupinefactory.org>",
]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://www.github.com/tock/libtock-rs"
description = "libtock block storage driver"

[dependencies]
libtock_platform = { path = "../../platform" }

[dev-dependencies]
libtock_unittest = { path = "../../unittest" }
