[package]
name = "embedded_graphics_libtock"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
repository = "https://www.github.com/tock/libtock-rs"
rust-version.workspace = true
description = "libtock-rs port of embedded graphics"

[dependencies]
embedded-graphics = "0.8.1"

libtock = { path = "../../", version = "0.1.0" }
libtock_platform = { path = "../../platform" }