# Finds all the libtock-core and libtock-rs examples and prints the sizes of
# several of their sections. Searches the target/$ARCH/release directory. Note
# that print-sizes will not build the examples; that is done by the
# `print-sizes` Makefile action.

[package]
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"
name = "print-sizes"
version = "0.1.0"

[dependencies]
elf = "0.0.10"
