[package]
name = "libtock_console"
version = "0.1.0"
authors = [
    "Tock Project Developers <tock-dev@googlegroups.com>",
    "dcz <gihuac.dcz@porcupinefactory.org>",
]
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://www.github.com/tock/libtock-rs"
rust-version.workspace = true
description = "libtock console driver"

[dependencies]
libtock_platform = { path = "../../../platform" }

[dev-dependencies]
libtock_unittest = { path = "../../../unittest" }
